wasm-hub/resources/gateway-clean.yaml
apiVersion: gateway.solo.io/v1
kind: Gateway
metadata:
  labels:
    app: gloo
  name: gateway-proxy
  namespace: gloo-system
spec:
    bindAddress: '::'
    bindPort: 8080
    httpGateway:
      options:
        wasm:
          filters: []
    proxyNames:
    - gateway-proxy
    useProxyProto: false
