wasm-hub/resources/gateway-v2-clean.yaml
apiVersion: gateway.solo.io.v2/v2
kind: Gateway
metadata:
  labels:
    app: gloo
  name: gateway-proxy-v2
  namespace: gloo-system
spec:
  bindAddress: '::'
  bindPort: 8080
  httpGateway: {}
  proxyNames:
  - gateway-proxy-v2
  useProxyProto: false
